--- a/src/App.css
+++ b/src/App.css
@@ -47,15 +47,14 @@ section{
 
 .hero-page{
     margin-top: 50px;
-    box-shadow: 0 -250px rgba(200,200,200);
-    background-color: rgb(200, 200, 200);
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 30vh;
+
 }
 .hero-text{
     position: relative;
-    bottom:100px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows : repeat(3, 1fr);
@@ -77,7 +76,6 @@ section{
     position: sticky;
     height: 50%;
     width: 100%;
-    background: grey;
     display: flex;
     justify-content: center;
     align-items: center;
