--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,14 @@
     box-sizing: border-box;
 }
 .App{
-    margin-top: 100px;
+    margin-top: 75px;
 }
 nav{
     background-color: rgba(255, 255, 255,.6);
     filter: drop-shadow(10px);
+    backdrop-filter: blur(10px);
     border-radius: 16px;
-    top: 30px;
+    top: 60px;
     position: sticky;
     z-index: 10000;
     display: flex;
