--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 }
 .App{
     margin-top: 75px;
+    box-shadow: inset 0 -300px black; 
 }
 nav{
     background-color: rgba(255, 255, 255,.6);
@@ -15,7 +16,7 @@ nav{
     position: sticky;
     z-index: 10000;
     display: flex;
-    width:50vw;
+    width:30vw;
     margin: 0 auto;
     align-items: center;
     justify-content: space-between;
@@ -55,6 +56,7 @@ section{
 
 }
 .hero-text{
+    top:100px;
     position: relative;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -103,15 +105,95 @@ section{
 .short-box {
     height: 50%;
     width: 40%;
-    background-color: #fd40e5;
+    background-color: #191919;
     transform: scale(0.5);
     z-index: 2;
     border-radius: 10px;
 }
+.inner-box{
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: 
+    'sidebar nav nav nav'
+    'sidebar graph graph graph'
+    'sidebar graph graph graph'
+    'sidebar graph graph graph'
+    ;
+}
+.inner-sidebar{
+    grid-area: sidebar;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 0.7rem;
+    padding: 10px;
+    color: #fff;
+}
+.inner-sidebar img{
+    height:50px;
+    width: 100px;
+}
+.inner-nav{
+    grid-area: nav ; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+}
+.inner-nav p{
+    padding:10px;
+}
+.inner-nav img{
+    height: 30px;
+    width: 30px;
+}
+.inner-graph{
+    grid-area: graph
+}
 
 
+.services{
+    height:100%;
+    background-color: black;
+    width:60vw;
+    margin:0 auto;
+    overflow: hidden;
+    border-radius: 1rem;
+}
 
-/*animation keyframes below */
+.card-holder{
+    display: flex;
+    justify-content: space-around;
+    width: 80vw;
+    padding: 100px;
+}
 
-
-
+.card-wrapper{
+    transform: translateX(-150px);
+    display: inline-block;
+    height:400px;
+    width: 300px;
+    background-color: white;
+    border-radius: 1rem;
+}
+.card-wrapper img{
+    height: 100px;
+    width: 200px;
+}
+.services-text{
+    display: flex;
+    color: white;
+}
+.terms-and-conditions{
+    position: relative;
+    background-image: linear-gradient(to right, #ff7d1e, #fd40e5);
+    width: 50vw;
+    margin: 300px auto;
+    padding: 100px;
+    border-radius:16px;
+    color: white;
+    margin-bottom: 0;
+    bottom: 70px;
+}
