--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 }
 .App{
     margin-top: 75px;
-    box-shadow: inset 0 -300px black; 
+    box-shadow: inset 0 -300px #191919; 
 }
-nav{
+.nav-bar{
     background-color: rgba(255, 255, 255,.6);
     filter: drop-shadow(10px);
     backdrop-filter: blur(10px);
@@ -68,12 +68,13 @@ section{
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(131deg, #ff7d1e 36%, #fd40e5);
     -webkit-background-clip: text;
+    background-clip: text;
     font-size: 5rem;
 }
 .spath {
     stroke-dasharray: var(--length);
     stroke-dashoffset: var(--length);
-    animation: example 2s linear 0s infinite;
+    animation: example 2s linear 1s infinite;
     stroke:url(#gradient)
 }
 .tpath {
@@ -103,8 +104,8 @@ section{
     align-items: center;
 }
 .short-box {
-    height: 50%;
-    width: 40%;
+    height: 600px;
+    width: 1000px;
     background-color: #191919;
     transform: scale(0.5);
     z-index: 2;
@@ -113,11 +114,10 @@ section{
 .inner-box{
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: .7fr repeat(2, 1fr);
+  grid-template-rows: .5fr repeat(2, 1fr);
     grid-template-areas: 
     'sidebar nav nav nav'
-    'sidebar graph graph graph'
     'sidebar graph graph graph'
     'sidebar graph graph graph'
     ;
@@ -126,7 +126,9 @@ section{
     grid-area: sidebar;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+ 
     font-size: 0.7rem;
     padding: 10px;
     color: #fff;
@@ -135,12 +137,29 @@ section{
     height:50px;
     width: 100px;
 }
+.inner-sidebar p{
+    padding: 30px;
+    font-size: 1rem;
+    border-radius: 16px;
+    background:linear-gradient(to right, #ff7d1e, #fd40e5);
+}
 .inner-nav{
     grid-area: nav ; 
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.inner-nav nav{
+    border-radius: 16px;
+    border: 10px solid;
+    border-image-slice: 1;
+    border-width: 5px;
+    border-image-source:linear-gradient(to right, #ff7d1e, #fd40e5);;
+    width: 90%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    color: white;
 }
 .inner-nav p{
     padding:10px;
@@ -150,14 +169,29 @@ section{
     width: 30px;
 }
 .inner-graph{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     grid-area: graph
+}
+.inner-graph .graph{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    height: 90%;
+    border: 10px solid;
+    border-image-slice: 1;
+    border-width: 5px;
+    border-image-source:linear-gradient(to right, #ff7d1e, #fd40e5);;
+    width: 90%;
 }
 
 
 .services{
     height:100%;
-    background-color: black;
-    width:60vw;
+    background-color: #191919;
+    width:1000px;
     margin:0 auto;
     overflow: hidden;
     border-radius: 1rem;
@@ -166,24 +200,42 @@ section{
 .card-holder{
     display: flex;
     justify-content: space-around;
-    width: 80vw;
+    width: 100vw;
     padding: 100px;
 }
 
 .card-wrapper{
     transform: translateX(-150px);
     display: inline-block;
-    height:400px;
-    width: 300px;
+    width: 400px;
+    padding-bottom: 50px;
     background-color: white;
     border-radius: 1rem;
+    text-align: center;
+}
+.card-wrapper p{
+ text-align: left;
+ margin: 40px;
 }
 .card-wrapper img{
-    height: 100px;
-    width: 200px;
+    height: 300px;
+    width: 400px;
+    border-radius: 16px;
 }
 .services-text{
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
+}
+.services-text p{
+    text-align: center;
+    font-weight: bold;
+}
+.services-text button{
+    background-image: linear-gradient(to right, #ff7d1e, #fd40e5);;
+    padding:10px;
+    border-radius: 16px;
     color: white;
 }
 .terms-and-conditions{
