--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ nav .logo{
 }
 nav button{
     height:40px;
-    border-radius: 16px;
+    border-radius: 20px;
     padding:10px;
     background-image: linear-gradient(to right, #ff7d1e, #fd40e5);
     color:white;
@@ -239,7 +239,7 @@ section{
 .services-text button{
     background-image: linear-gradient(to right, #ff7d1e, #fd40e5);;
     padding:10px;
-    border-radius: 16px;
+    border-radius: 20px;
     color: white;
 }
 .terms-and-conditions{
@@ -247,9 +247,42 @@ section{
     background-image: linear-gradient(to right, #ff7d1e, #fd40e5);
     width: 50vw;
     margin: 300px auto;
-    padding: 100px;
+    padding: 50px;
     border-radius:16px;
     color: white;
     margin-bottom: 0;
     bottom: 70px;
+}
+
+.accept-tandc {
+    margin-top: 20px;
+    display: flex;
+    margin-bottom: 20px;
+}
+.accept-tandc p{
+    margin-left: 20px;
+}
+
+.email-submit {
+    height: auto;
+    width: 500px;
+    margin-top: 10px;
+    display: flex;
+}
+
+#e1 {
+    height: 35px;
+    width: 400px;
+    border-radius: 20px;
+    padding-inline: 15px;
+}
+
+#submit {
+    margin-left: 20px;
+    height: 35px;
+    width: 150px;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+
 }
