--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,9 @@ section{
     background-clip: text;
     font-size: 5rem;
 }
+.third-line{
+    margin-left: 40px;
+}
 .wrapper {
     height: 200vh;  
 }
@@ -188,8 +191,9 @@ section{
 }
 .floater{
     position:absolute;
-    animation: rotate 5s linear 2s infinite forwards;
-    right:50px;
+    right: 0;
+    /* animation: rotate 5s linear 2s infinite forwards; */
+    transition: transform 1 ease-in-out;
     z-index: -1;
 }
 @keyframes rotate {
@@ -246,12 +250,19 @@ section{
     position: relative;
     background-image: linear-gradient(to right, #ff7d1e, #fd40e5);
     width: 50vw;
-    margin: 300px auto;
+    margin: 100px auto;
     padding: 50px;
     border-radius:16px;
     color: white;
     margin-bottom: 0;
     bottom: 70px;
+    overflow-x:visible;
+}
+.bf{
+    position: absolute;
+    /* animation: rotate 5s linear 2s infinite forwards; */
+    transition: transform 1 ease-in-out;
+    z-index: -1;
 }
 
 .accept-tandc {
