--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
     margin-top: 75px;
     box-shadow: inset 0 -300px #191919; 
 }
-
+.ReactModal__Overlay{
+    z-index: 2;
+}
 /* The animation code */
 @keyframes trace {
     from {
@@ -24,7 +26,7 @@
     border-radius: 16px;
     top: 60px;
     position: sticky;
-    z-index: 10000;
+    z-index: 1;
     display: flex;
     width:30vw;
     margin: 0 auto;
