--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
     background-color: rgba(255, 255, 255,.6);
     filter: drop-shadow(10px);
     backdrop-filter: blur(10px);
-    border-radius: 16px;
+    border-radius: 20px;
     top: 60px;
     position: sticky;
     z-index: 1;
@@ -298,4 +298,52 @@ section{
     background-color: black;
     color: white;
 
+}
+
+/* The code below is for modal */
+.cont-box{
+    display: flex;
+    flex-direction: row;
+}
+.header-box{
+    height: 40px;
+    font-size: x-large;
+    font-weight: bold;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #dee2e6;
+}
+#bc{
+    font-size: large;
+    font-family: sans-serif;
+    font-weight: 300;
+    height: 40px;
+    width:40px;
+    border-radius: 20px;
+    background-image: linear-gradient(to right, #ff7d1e, #fd40e5);
+    color: white;
+    border: none;
+}
+.info-container{
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    padding:1rem;
+}
+
+.info-container svg{
+    height: 30px;
+    width: 50px;
+}
+.info-container div{
+    margin-left: 20px;
+}
+.tspawn{
+    font-size: larger;
+    font-weight: 500;
 }
