--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,6 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-}
 .App{
-    margin-top: 75px;
-    box-shadow: inset 0 -300px #191919; 
-    margin-left:50px;
-    margin-right:50px;
+    font-size: 1rem;
 }
-section{
-    height: 100vh;
+.logo{
+    height:40px;
 }
-
-.ReactModal__Overlay{
-    z-index: 2;
-}
-
-
-
