--- a/src/component/Card.css
+++ b/src/component/Card.css
@@ -1,4 +1,16 @@
-.card-wrapper img{
+
+.card-wrapper{
+    background-color: white;
+    padding:10px;
+    margin:10px;
+    border-radius:16px;
+    text-align: justify;
+}
+.card{
+    width: 90%;
+    margin: 0 auto;
+}
+.card img{
     height: 200px;
-    width: 300px;
+    width: 100%;
 }
