--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App{
     font-size: 1rem;
     --gradient: linear-gradient(to right, #ff7d1e, #fd40e5);
+    box-shadow: inset 0 -300px black;
 }
 .logo{
     height:40px;
