--- a/src/App.css
+++ b/src/App.css
@@ -347,3 +347,265 @@ section{
     font-size: larger;
     font-weight: 500;
 }
+
+svg {
+    max-width: 100%;
+    height: auto;
+}
+
+/*the below code is for mobile view*/
+@media (max-width:768px){
+    /*This is for nav bar*/
+    .nav-bar {
+        width: 43%;
+    }
+    .nav-bar .logo{
+        margin-left: 10px;
+    }
+
+    .nav-bar button {
+        height: 30px;
+        padding: 5px;
+        font-size: 12px;
+    }
+     /*This is for text at the start */
+    .hero-text {
+        top: 40px;
+        grid-template-columns: 135px;
+        grid-template-rows: 40px;
+    }
+    .first-line{
+        margin-right: 160px;
+    }
+    .second-line{
+        font-size: 16px;
+        margin-top: 20px;
+        margin-right: 100px;
+    }
+    .first-line,
+    .third-line {
+        font-size: 40px;
+    }
+    .third-line{
+        margin-top: 10px;
+        margin-left: 120px;
+    }
+    /* This is Box Part */
+    .wrapper {
+        height: 100vh;
+    }
+
+    .box {
+        top: 0;
+        position: sticky;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .short-box {
+        background-color: #191919;
+        transform: scale(1);
+        z-index: 2;
+    }
+
+    .inner-box {
+        height: 100%;
+        min-width: min-content;
+        display: grid;
+        grid-template-columns: .5fr 1fr 1fr;
+        grid-template-rows: .5fr repeat(2, 1fr);
+        grid-template-areas:
+            'sidebar nav nav nav'
+            'sidebar graph graph graph'
+            'sidebar graph graph graph'
+        ;
+    }
+
+    .inner-sidebar {
+        grid-area: sidebar;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 0.7rem;
+        padding: 1px;
+        color: #fff;
+    }
+
+    .inner-sidebar img {
+        height: 50px;
+    }
+
+    .inner-sidebar p {
+        padding: 10px;
+        font-size: inherit;
+        border-radius: 16px;
+        background: var(--gradient);
+    }
+
+    .inner-nav {
+        grid-area: nav;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .inner-nav nav {
+        width: 90%;
+        min-width: min-content;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .inner-nav p {
+        padding: 10px;
+    }
+
+    .inner-nav img {
+        height: 30px;
+        width: 30px;
+    }
+
+    .inner-graph {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        grid-area: graph
+    }
+
+    .inner-graph .graph {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 90%;
+        width: 90%;
+        padding: 10px;
+    }
+    /* This is for services box */
+    .card-holder {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .card-wrapper {
+        transform: none;
+        width: 90%;
+        max-width: 400px;
+        margin-bottom: 20px;
+        background-color: white;
+        border-radius: 1rem;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .card-wrapper p {
+        text-align: center;
+        margin: 10px;
+    }
+
+    .card-wrapper img {
+        height: auto;
+        width: 100%;
+        border-radius: 16px;
+    }
+    .services svg{
+        margin-right: -40px;
+    }
+    .services{
+        width:90%;
+        max-width: none;
+        margin:10px auto;
+    }
+
+    .services-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .services-text img {
+        height: 100px;
+        width: auto;
+        margin-bottom: 10px;
+    }
+
+    .services-text p {
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+
+    .services-text a {
+        margin-top: 10px;
+    }
+
+    .services-text button {
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+
+    /*This is for terms and conditions */
+    .terms-and-conditions {
+        width: 95%;
+        padding: 30px;
+    }
+
+    .accept-tandc {
+        margin-top: 15px;
+    }
+
+    .email-submit {
+        width: 95%;
+    }
+
+    #e1 {
+        width: 100%;
+    }
+
+    /*This is for Modal part*/
+    .cont-box {
+        width: 90%;
+        max-width: none;
+        height: auto;
+        margin: 10px auto;
+        padding: 10px;
+    }
+    .header-box {
+        font-size: medium;
+        margin-bottom: 5px;
+        padding-bottom: 5px;
+    }
+
+    #bc {
+        font-size: small;
+        height: 20px;
+        width: 20px;
+        border-radius: 10px;
+    }
+
+    .info-container {
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .info-container svg {
+        height: 20px;
+        width: 30px;
+    }
+
+    .info-container div {
+        margin-top: 0;
+        margin-left: 10px;
+    }
+    .tspawn {
+        font-size: small;
+    }
+}
